fixing carousel image size on safari

--- a/web/src/components/Carousel/carousel.module.css
+++ b/web/src/components/Carousel/carousel.module.css
@@ -23,13 +23,16 @@
 }
 .inner{
   background-color: var(--color-light-blue);
-  height:40vh;
+  height:30vh;
   overflow-x: scroll;
   overflow-y:hidden;
   cursor: grab;
   /* height:40vh;
   overflow: visible;
   white-space:nowrap; */
+  @media (--media-min-medium) {
+    height: 40vh;
+  }
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 .inner::-webkit-scrollbar {
@@ -75,9 +78,12 @@
   margin:0 5px;
 }
 .root .embed{
-  height: 40vh !important;
+  height: 30vh !important;
   width: 73.5vh !important;
   overflow: hidden;
+  @media (--media-min-medium) {
+    height: 40vh !important;
+  }
 }
 .root .embed iframe{
   /* max-width: calc(177.778vh);
@@ -89,8 +95,11 @@
   pointer-events: none;
 }
 .pdf iframe{
-  height: 40vh;
+  height: 30vh;
   cursor: pointer;
+  @media (--media-min-medium) {
+    height: 40vh;
+  }
 }
 .noCarousel{
   display:flex;
@@ -118,8 +127,11 @@
   display: none;
 }
 .figure, .figure  div, .figure  image{
-  height: 40vh;
+  height: 30vh;
   display: inline-block;
+  @media (--media-min-medium) {
+    height: 40vh;
+  }
 }
 .wrapper{
   box-shadow: inset 0 0 5px 5px var(--color-light-blue);
